--- a/html/login.html
+++ b/html/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,22 +10,35 @@
     <link rel="shortcut icon" href="../imgs/LOGO.png" type="image/x-icon">
     <title>Login</title>
 </head>
+
 <body>
+    <img class="wave" id="background_wave_left" src="../imgs/background-wave.png"></img>
+    <img class="wave" id="background_wave_right" src="../imgs/background-wave.png"></img>
     <header>
-        <img src="../imgs/logoNoWhite.png" alt="Logo" id="logo_img">
-        <button id="cadastro_btn">Criar conta</button>
+        <img src="../imgs/return-arrow.png" alt="return_arrow" id="return_img">
     </header>
     <main id="container">
-        <h1>Login</h1>
+        <header>
+            <img src="../imgs/logo.png" alt="logo">
+            <h1>Acesse sua conta</h1>
+        </header>
         <form id="login_form">
-            <input placeholder="E-mail" type="email" id="email_inp" required>
-            <input placeholder="Senha" type="password" id="senha_inp" required>
-            <button type="submit">Login</button>
+            <div class="form_div">
+                <label for="email_inp">E-mail</label>
+                <input type="email" id="email_inp" required>
+            </div>
+            <div class="form_div">
+                <label for="senha_inp">Senha</label>
+                <input type="password" id="senha_inp" required>
+            </div>
+            <button type="submit">Entrar</button>
         </form>
         <footer>
-            <span>Não tem conta? <a href="./cadastro.html">Crie aqui</a></span>
+            <span>Primeiro acesso? <a href="./cadastro.html">Cadastre-se</a></span>
         </footer>
     </main>
 </body>
+
 <script src="../js/login.js"></script>
+
 </html>
