--- a/html/login.html
+++ b/html/login.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <img class="wave" id="background_wave_left" src="../imgs/background-wave.png"></img>
-    <img class="wave" id="background_wave_right" src="../imgs/background-wave.png"></img>
+    <!-- <img class="wave" id="background_wave_left" src="../imgs/background-wave.png"></img>
+    <img class="wave" id="background_wave_right" src="../imgs/background-wave.png"></img> -->
     <header>
         <img src="../imgs/return-arrow.png" alt="return_arrow" id="return_img">
     </header>
