--- a/site-institucional/index.html
+++ b/site-institucional/index.html
@@ -11,7 +11,7 @@
   <title>AURA</title>
 </head>
 
-<body>
+<body class="vw-accessible">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 
